# UTFG-CPP

./: CMakeLists.txt  main.cpp
core/: Game.hpp
core/Rendering/: AssetLoader.hpp  Renderer.hpp
